# eos-skill

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml  run.py  skill.md
eos_skill/: endoflife.py  eos_data.py  latest_versions.py  main.py  report.py  scanners.py
