[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "eos-skill"
version = "0.1.0"
description = "AWS End-of-Support resource scanner and upgrade advisor"
requires-python = ">=3.9"
dependencies = [
    "boto3>=1.34.0",
    "openpyxl>=3.1.0",
]

[project.scripts]
eos-scan = "eos_skill.cli:main"

[tool.setuptools.packages.find]
include = ["eos_skill*"]
